# mp_first_person_shooter

./: Cargo.toml
src/: audio.rs  camera.rs  collision.rs  collision_world.rs  console.rs  game_state.rs  gpu_types.rs  input.rs  main.rs  model.rs  player.rs  quad_renderer.rs  quad_shader.wgsl  render_commands.rs  render_state.rs  resource_manager.rs  skeleton_mesh_shader.wgsl  static_mesh_shader.wgsl  texture.rs
