[package]
name = "mp_first_person_shooter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
bytemuck = { version = "1.14", features = [ "derive" ] }
glam = "0.25"
wgpu = "0.18"
pollster = "0.3"
anyhow = "1.0"
gltf = "1.4.0"
serde = { version = "1.0.193", features = ["derive"] }